--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,33 +1,38 @@
-<%= form_for @user do |f| %>
-<% if @user.errors.any? %>
-<div id="error_explanation">
-    <div class="alert-error">
-        O formulário contém <%= pluralize(@user.errors.count, "erro") %>.
-    </div>
-    <ul>
-        <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
+<div class="container form-style">
+    <h1 class="h1">User Register</h1>
+    <%= form_for @user,  html: { class: 'row' } do |f| %>
+    <div class="col-lg-6 row d-flex justify-content-center">
+        <% if @user.errors.any? %>
+        <div id="error_explanation">
+            <div class="alert-error">
+                O formulário contém <%= pluralize(@user.errors.count, "erro") %>.
+            </div>
+            <ul>
+                <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+                <% end %>
+            </ul>
+        </div>
         <% end %>
-    </ul>
+        <div class="col-lg-6 field input-group input-group-sm mb-3">
+            <%= f.label :name, class: "input-group-text" %>
+            <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <div class="col-lg-6 field input-group input-group-sm mb-3">
+            <%= f.label :email, class: "input-group-text" %>
+            <%= f.email_field :email, class: "form-control" %>
+        </div>
+        <div class="col-lg-6 field input-group input-group-sm mb-3">
+            <%= f.label :password, class: "input-group-text" %>
+            <%= f.password_field :password, class: "form-control" %>
+        </div>
+        <div class="col-lg-6 field input-group input-group-sm mb-3">
+            <%= f.label :password_confirmation, class: "input-group-text" %>
+            <%= f.password_field :password_confirmation, class: "form-control" %>
+        </div>
+        <div class="col-lg-6 actions input-group input-group-sm mb-3">
+            <%= f.submit "Cadastrar", class: "btn btn-primary" %>
+        </div>
+    </div>
+    <% end %>
 </div>
-<% end %>
-<div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-</div>
-<div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email %>
-</div>
-<div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-</div>
-<div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-</div>
-<div class="actions">
-    <%= f.submit "Cadastrar"%>
-</div>
-<% end %>
