--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,15 +1,13 @@
 <header class="p-3 bg-dark text-white">
     <div class="container">
-        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                    <use xlink:href="#bootstrap"></use>
-                </svg>
-            </a>
-
-            <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
-                <button type="button" class="btn btn-warning">Sign-up</button>
+        <div class="nav-header d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <div class="text-end d-flex flex-row bd-highlight mb-3">
+                <% unless logged_in? %>
+                    <%= button_to "Sign-in", sign_in_path, method: :get, class: "btn btn-outline-light me-2" %>
+                    <%= button_to "Sign-up!", new_user_path, method: :get, class: "btn btn-warning" %>
+                <% else %>
+                    <%= button_to "Sign-out", sign_out_path, method: :delete, class: "btn btn-outline-light me-2" %>
+                <% end %>
             </div>
         </div>
     </div>
