create profile page

--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -13,3 +13,11 @@ h1 {
 .form-style {
     padding-top: 60px;
 }
+
+.profile {
+    padding-top: 4px;
+}
+
+.profile-wrapper {
+    margin-left: 46px;
+}
