--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,4 @@
-<html>
-
-<body>
+<div class="container form-style">
     <h3>Perfil de <%= @user.name %> </h3>
     <%= @user.email %>
-</body>
-
-</html>
+</div>
