select data source

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,7 +31,7 @@
             <%= f.password_field :password_confirmation, class: "form-control" %>
         </div>
         <div class="col-lg-6 actions input-group input-group-sm mb-3">
-            <%= f.submit "Cadastrar", class: "btn btn-primary" %>
+            <%= f.submit "Create", class: "btn btn-primary" %>
         </div>
     </div>
     <% end %>
