--- a/app/frontend/packs/application.scss
+++ b/app/frontend/packs/application.scss
@@ -21,3 +21,11 @@ h1 {
 .profile-wrapper {
     margin-left: 46px;
 }
+
+.content {
+    padding-bottom: 100px;
+}
+
+.file-upload {
+    font-size: 20px;
+}
